--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ vendor/
 # Go workspace file
 go.work
 
+
 # Compiled Object files, Static and Dynamic libs (Shared Objects)
 *.o
 *.a
@@ -51,6 +52,7 @@ _testmain.go
 .DS_Store
 
 db-data
+.env
 
 #other
 node_modules/
