--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,30 @@
 version: "3"
 
 services:
-  general-service:
-    build:
-      dockerfile: ./Dockerfile
-    restart: always
-    ports:
-      - "8080:80"
-
   postgres:
     image: "postgres:14.0"
     ports:
       - "5432:5432"
     restart: always
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_DB: ${DATABASE_NAME}
     volumes:
       - ./db-data/postgres/:/var/lib/postgresql/data/
+  app:
+    image: rekar2022/general-service
+    container_name: general-service
+    environment:
+      - DATABASE_USER=${DATABASE_USER}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+      - DATABASE_NAME=${DATABASE_NAME}
+      - PORT=${PORT}
+      - HOST=${HOST}
+      - TIME_ZONE=${TIME_ZONE}
+
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      - postgres
