--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       POSTGRES_DB: ${DATABASE_NAME}
     volumes:
       - ./db-data/postgres/:/var/lib/postgresql/data/
-  app:
+
+  general-service:
     image: rekar2022/general-service
     container_name: general-service
     environment:
@@ -22,7 +23,6 @@ services:
       - PORT=${PORT}
       - HOST=${HOST}
       - TIME_ZONE=${TIME_ZONE}
-
     build:
       context: .
       dockerfile: Dockerfile
